Fixed issues where errors would occur when trying to perform actions on invalid Origami instances
Added command aliases for origami-paper and origami-velocity

--- a/paper/src/main/resources/plugin.yml
+++ b/paper/src/main/resources/plugin.yml
@@ -12,6 +12,7 @@ permissions:
 
 commands:
   origami:
+    aliases: origami-paper
     description: Give an input to a running program
     usage: /<command> <instance> <input>
     permission: origami.command
