--- a/paper/src/main/resources/plugin.yml
+++ b/paper/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Origami
 version: 1.0.0
 main: com.origamimc.main.PaperOrigamiMain
-description: Run other jar files inside of Paper or Velocity servers
+description: Run other jar files inside of Paper, Velocity or Waterfall servers
 api-version: '1.20'
 author: cometcake575
 
